# pilet

./: .gitattributes  .gitgnore  README.md  pyproject.toml
examples/: .gitattributes
examples/interactive/: it_engineer.py  main.py
examples/interactive/.streamlit/: config.toml
examples/interactive/static/: __init__.py  icons_list.py  menu_options.py
examples/interactive/utils/: __init__.py  utility.py
examples/live/android/: settings.gradle
examples/live/server/: index.js  package-lock.json
examples/omni/: pilet-o.py
examples/omni/android/app/: build.gradle
examples/omni/android/app/src/main/: AndroidManifest.xml
examples/omni/android/app/src/main/res/layout/: activity_call.xml
examples/omni/server/: package.json
examples/streamlit/: it_engineer.py
pilet/: pilet.py
pilet/agents/: __init__.py  agent.py  codemaster.py  omni.py  rag.py
pilet/constants/: __init__.py  const.py
pilet/constants/enums/: agent_mode.py  llm_engines.py  process_type.py  translator_model.py
pilet/engines/: base_engine.py
pilet/jobs/: __init__.py  audio_analyzer.py  job.py  qna.py  sentiment_analysis.py  translate.py  video_analyzer.py  write_code.py
pilet/settings/: __init__.py  i10n.py  i18n.py
pilet/static/: __init__.py  defaults.py  router.py
pilet/tools/: __init__.py  codegen.py  sentiment_analysis.py  stt.py  tool.py  tts.py  websearch.py
pilet/utils/: __init__.py  audio-video-manager.py  prompt_template.py  response_eval.py  router_engine.py  router_output.py  utility.py
pilet/utils/cache/: cache_tools.py
(+12 files in other folders)
